refactorisation